Nuevos TurnsCommand y AuctionCommand. Implementado Spy en ConjureTarget de ServiceController llamado por MagicController. Reducidos costes de mana en hechizos, ahora no escalan los costes por nivel de magia, aunque si las habilidades de porcentajes.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -28,7 +28,7 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-12 text-center text-only">
-                            PUJA<sub>nueva</sub> &ge; PUJA<sub>actual</sub> * 1.10
+                            PUJA<sub>nueva</sub> &ge; PUJA<sub>actual</sub> + 10%
                         </div>
                     </div>
                 </div>
