--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -28,7 +28,7 @@
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-12 text-center text-only">
-                                    ORO<sub>recaudado</sub> = ORO<sub>granjas</sub> * GRANJAS<sub>jugador</sub> * 2
+                                    ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * 60
                                 </div>
                             </div>
                         </div>
