--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -28,7 +28,7 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-12 text-center text-only">
-                            PROB<sub>éxito</sub> = MAX( 75, 100 - BARRERAS<sub>jugador</sub> * 1 / 100 )
+                            PROB<sub>éxito</sub> = MIN(75, 5 + BARRERAS<sub>jugador</sub> * 10 / 100)
                         </div>
                     </div>
                 </div>
