--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -28,7 +28,7 @@
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-12 text-center text-only">
-                                    MANA<sub>cargado</sub> = MANA<sub>nodos</sub> * NODOS<sub>jugador</sub> * 2
+                                    MANA<sub>cargado</sub> = NODOS<sub>jugador</sub> * 20
                                 </div>
                             </div>
                         </div>
