--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -20,7 +20,7 @@
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta las {{ 3500|nf }}.</div>
+                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta {{ 3500|nf }}.</div>
                                 </div>
                             </div>
                         </div>
