--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -7,11 +7,8 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-envelope"></i>Mensajes
-                {% if message is defined %}
-                    <br><small class="text-responsive">{{ message.datetime|date('d/m/Y H:i:s') }} - {{ message.subject|truncate(20) }}</small>
-                {% endif %}
-                </h1>
+                <h1><i class="fa fa-fw fa-envelope"></i>Mensajes</h1>
+                {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             {% if message is not defined %}
             <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
