--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -101,7 +101,7 @@
                                 <div class="col-xs-12"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> [{{ enchantment.owner.magic }}] ({{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration*enchantment.owner.magic)|nf }})</div>
                             {% else %}
                             {# row #}
-                            <div class="col-xs-12">Ningún encantamiento en tu templo</div>
+                            <div class="col-xs-12">Ningún encantamiento en tu reino</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> [{{ contract.hero.level|nf }}]</span></div>
                             {% else %}
-                            <div class="col-xs-12">Ningún héroe en la taberna</div>
+                            <div class="col-xs-12">Ningún héroe en tu reino</div>
                             {% endfor %}
                         </div>
                     </div>
@@ -171,10 +171,11 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-shield"></i>{{ player.magicDefense|nf }}% <span class="label label-extra">Defensa Mágica</span></div>
+                            {# row #}
                             <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}" class="link"><span class="label label-{{ player.research.spell.faction.class }}">{{ player.research.spell.name }}</span></a>{% else %}Ningún hechizo en defensa{% endif %}</div>
                             {# row #}
                             <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ player.item.spell.name|slug }}" class="link"><span class="label label-{{ player.item.artifact.class }}">{{ player.item.spell.name }}</span></a>{% else %}Ningún artefacto en defensa{% endif %}</div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-shield"></i>{{ player.magicDefense|nf }}% <span class="label label-extra">Defensa Mágica</span></div>
                         </div>
                     </div>
                 </div>
@@ -194,9 +195,9 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-envelope"></i>{{ player.messages|length|nf }} <span class="label label-extra">Mensajes</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-envelope"></i>{{ player.messages|length|nf }} <a href="{{ path('archmage_game_account_message') }}" class="link"><span class="label label-extra">Mensajes</span></a></div>
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-rocket"></i>{{ player.power|nf }} <span class="label label-extra">Poder</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-rocket"></i>{{ player.power|nf }} <a href="{{ path('archmage_game_account_ranking') }}" class="link"><span class="label label-extra">Poder</span></a></div>
                         </div>
                     </div>
                 </div>
