--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             {% if message is not defined %}
-            <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
+            <table id="datatable" class="table table-striped table-bordered table-condensed text-responsive" cellspacing="0" width="100%">
                 <thead>
                 <tr>
                     <th class="text-center"><i class="fa fa-fw fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
@@ -23,7 +23,7 @@
                     {% for message in player.messages %}
                     <tr>
                         <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
-                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.owner.nick|default('Admin') } ) }}" class="link"><span class="label label-{{ message.owner.faction.class|default('extra') }}">{{ message.owner.nick|default('Admin') }}</span></a></td>
+                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'id': message.owner.id|default(player.id) } ) }}" class="link"><span class="label label-{{ message.owner.faction.class|default('extra') }}">{{ message.owner.nick|default('Admin') }}</span></a></td>
                         <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}" class="link">{{ message.subject|truncate(20) }}</a></td>
                     </tr>
                     {% endfor %}
