--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -8,6 +8,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-trophy"></i>Perfil</h1>
+                {#{% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}#}
             </div>
         </div>
     </div>
@@ -15,31 +16,17 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="box-icon alert alert-{{ player.faction.class }}">
-                    <span class="fa fa-fw fa-4x fa-user"></span>
+                    <i class="fa fa-fw fa-4x fa-user"></i>
                 </div>
                 <div class="info">
                     <h1 class="text-center">{{ player.nick }}</h1>
-                    <h2>Hechizos</h2>
-                    {% for progress in progresses %}
-                    <div class="col-xs-12">
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-{{ progress.class }} progress-bar-striped" role="progressbar" aria-valuenow="{{ progress.researchs }}" aria-valuemin="0" aria-valuemax="{{ progress.total }}" style="min-width:4em; width: {{ progress.researchs / progress.total * 100 }}%">
-                                <span>{{ progress.researchs }}/{{ progress.total }}</span>
-                            </div>
-                        </div>
+                    <h2><i class="fa fa-fw fa-rocket"></i>{{ player.power|nf }}</h2>
+                    <br>
+                    {% for achievement in player.achievements %}
+                    <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-{% if loop.index is odd %}1{% else %}2{% endif %} alert alert-{{ player.faction.class }} ribbon text-center text-responsive">
+                        <i class="fa fa-fw fa-lg fa-trophy"></i>{{ achievement.name }}
+                        <small>({{ achievement.description }})</small>
                     </div>
-                    {% endfor %}
-                    <h2>Logros</h2>
-                    {% for i in 1..8 %}
-                        {% if loop.index is odd %}
-                    <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-1 alert alert-{{ player.faction.class }} ribbon text-center text-responsive">
-                        <i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado
-                    </div>
-                        {% else %}
-                    <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-2 alert alert-{{ player.faction.class }} ribbon text-center text-responsive">
-                        <i class="fa fa-fw fa-lg fa-trophy"></i>Logro desbloqueado
-                    </div>
-                        {% endif%}
                     {% endfor %}
                 </div>
             </div>
