Modificado magiclevel de los dioses de 5 a 10. Terminado enchantment en conjuretarget y conjureself. Faltan casos especiales como encontrar y destruir artefacto, oro, poblacion, etc.

--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -78,7 +78,7 @@
                                 {% endif %}
                                 <input type="hidden" id="research" name="research" value="{{ research.id }}" required />
                                 <div class="btn-group" role="group" aria-label="...">
-                                    <button type="submit" id="conjure" name="action" value="conjure" class="btn btn-default" {% if research.spell.manaCost * player.magic > player.mana %}disabled{% endif %}><i class="fa fa-fw fa-tint"></i>Conjurar</button>
+                                    <button type="submit" id="conjure" name="action" value="conjure" class="btn btn-default" {% if research.spell.manaCost > player.mana %}disabled{% endif %}><i class="fa fa-fw fa-tint"></i>Conjurar</button>
                                     {% if research.spell.skill.battle %}
                                     <button type="submit" id="defense" name="action" value="defense" class="btn btn-default" {% if research == player.research %}disabled{% endif %}><i class="fa fa-fw fa-shield"></i>Defensa</button>
                                     {% endif %}
