--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -49,7 +49,7 @@
                         <div class="col-xs-8 text-padded">
                             {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-magic"></i>{{ research.spell.magic|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-hourglass-half"></i>{{ (research.spell.turnsCost * player.magic)|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-hourglass-half"></i>{% if research.spell.faction == player.faction %}{{ (research.spell.turnsCost * player.magic)|nf }}{% else %}{{ research.spell.turnsCost * player.magic * 2 }}{% endif %}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{% if research.spell.faction == player.faction %}{{ research.spell.manaCost|nf }}{% else %}{{ (research.spell.manaCost * 2)|nf }}{% endif %}</div>
                             {% if research.spell.enchantment %}
                             {# row #}
