Pocos cambios importantes.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -90,7 +90,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
     border: 1px solid black;
 }
 .label-extra {
-    background-color: #6F3A00;
+    background-color: #3E444C;
 }
 .resources .label {
 
