--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -28,37 +28,37 @@
                     <div class="panel-middle text-center">Opciones</div>
                     <div class="panel-body text-center">
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-xs-12">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <select class="form-control selectpicker show-tick" id="target" name="target" data-live-search="true">
+                                        <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5">
                                             <option>Objetivo</option>
                                             {% for target in targets %}
-                                                <option value="{{ target.id }}" data-subtext="{{ target.player.power|nf }}">{{ target.username }}</option>
+                                                <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-4">
+                            <div class="col-xs-12">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <select class="form-control selectpicker show-tick" id="research" name="research" data-live-search="true">
+                                        <select class="form-control selectpicker show-tick dropup" id="research" name="research" data-live-search="true" data-size="5">
                                             <option>Hechizo</option>
                                             {% for research in player.researchs if research.active and research.spell.skill.battle %}
-                                                <option value="{{ research.id }}">{{ research.spell.name }}</option>
+                                                <option value="{{ research.id }}" data-content="<span class='label label-{{ research.spell.faction.class }}'>{{ research.spell.name }}</span>">{{ research.spell.name }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-4">
+                            <div class="col-xs-12">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <select class="form-control selectpicker show-tick" id="item" name="item" data-live-search="true">
+                                        <select class="form-control selectpicker show-tick dropup" id="item" name="item" data-live-search="true" data-size="5">
                                             <option>Artefacto</option>
                                             {% for item in player.items if item.quantity > 0 and item.artifact.skill.battle %}
-                                                <option value="{{ item.id }}">{{ item.artifact.name }}</option>
+                                                <option value="{{ item.id }}" data-content="<span class='label label-{{ item.artifact.faction.class }}'>{{ item.artifact.name }}</span>">{{ item.artifact.name }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
