--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_magic_charge' ) }}"><i class="fa fa-fw fa-tint"></i>Cargar</span></a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_magic_charge' ) }}"><i class="fa fa-fw fa-tint"></i>Cargar</a>
                 </div>
             </div>
         </div>
