Arreglados todos los href con links a la ayuda, con spans de colores y demas historias. Tocados todos los controladores para eso. Nuevo Balance.html.twig para resumen de costes, lo veo necesario.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -296,6 +296,9 @@ table a:hover {
     }
 }
 html {-webkit-text-size-adjust: none !important;}
+.bootstrap-select.form-control:not([class*="col-"]) {
+    width: 60%;
+}
 /* ARREGLAR BORDES BLANCOS EN BOOTSRAP SELECT */
 .bootstrap-select {
     border-radius: 3px !important;
