--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -21,7 +21,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro jugador para intentar disminuir su poder y, dependiendo de la gravedad de la victoria, robarle <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span>, <span class="label label-extra">Maná</span>, <span class="label label-extra">Tierras</span> y <span class="label label-extra">Artefactos</span>.</div>
+                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro jugador para intentar disminuir su poder y, dependiendo de la gravedad de la victoria, robarle <span class="label label-extra">Tierras</span>.</div>
                             </div>
                         </div>
                     </div>
