--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> para eliminar tropas de tu ejército por si necesitas espacio para nuevas tropas o si crees que tienen un impacto negativo en tu economía y no podrás mantenerlas demasiado tiempo.</div>
+                            <div class="col-xs-12">Aquí puedes eliminar gratuitamente tropas de tu ejército por si necesitas espacio para nuevas tropas o si crees que tienen un impacto negativo en tu economía y no podrás mantenerlas demasiado tiempo.</div>
                         </div>
                     </div>
                 </div>
