--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ayuda{% endblock %}
 
 {% block body %}
-<div class="container" xmlns="http://www.w3.org/1999/html">
+<div class="container">
     <div class="row">
         <div class="col-xs-12"><a name="top"></a>
             <div class="page-header text-center">
