--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/temple.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes intentar romper un <span class="label label-extra">Encantamiento</span> amigo o enemigo sobre tu reino. Si es enemigo, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> para intentar romper un <span class="label label-extra">Encantamiento</span> amigo o enemigo sobre tu reino. Si es enemigo, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>.</div>
                         </div>
                     </div>
                 </div>
