--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -16,7 +16,8 @@
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="{{ path('archmage_game_kingdom_tax') }}"><i class="fa fa-fw fa-lg fa-money"></i>Recaudar oro</a></li>
                         <li><a href="{{ path('archmage_game_kingdom_auction') }}"><i class="fa fa-fw fa-lg fa-user-secret"></i>Mercado negro</a></li>
-                        <li><a href="{{ path('archmage_game_kingdom_temple') }}"><i class="fa fa-fw fa-lg fa-balance-scale"></i>Templo</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_temple') }}"><i class="fa fa-fw fa-lg fa-bell"></i>Templo</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_balance') }}"><i class="fa fa-fw fa-lg fa-balance-scale"></i>Balance</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
