--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-balance-scale"></i>Templo</h1>
+                <h1><i class="fa fa-fw fa-bell"></i>Templo</h1>
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             <div class="row">
@@ -20,7 +20,7 @@
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/temple.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> para recibir un encantamiento aleatorio, bueno o malo, de uno de los 5 Dioses, pero exigirán un sacrificio a cambio.</div>
+                                    <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> para recibir un encantamiento aleatorio, bueno o malo, de uno de los 5 Dioses, pero exigirán un sacrificio a cambio.</div>
                                 </div>
                             </div>
                         </div>
@@ -34,7 +34,7 @@
                         </div>
                         <div class="panel-footer text-center">
                             <form id="temple" name="temple" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_temple') }}" method="post" role="form">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-balance-scale"></i>Sacrificio</button>
+                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-bell"></i>Sacrificio</button>
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('temple') }}">
                             </form>
                         </div>
