--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -51,8 +51,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ research.spell.magic|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ research.spell.manaCost|nf }}</div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ research.turns|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ player.researchRatio(research.spell.turnsResearch)|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-hourglass-half"></i>{{ research.turns|nf }} / {{ player.researchRatio(research.spell.turnsResearch)|nf }}</div>
                             {% if research.spell.enchantment %}
                             {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ research.spell.goldMaintenance|nf }}</div>
@@ -95,8 +94,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ spell.magic|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ spell.manaCost|nf }}</div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>0</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ player.researchRatio(spell.turnsResearch)|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-hourglass-half"></i>0 / {{ player.researchRatio(spell.turnsResearch)|nf }}</div>
                             {% if spell.enchantment %}
                             {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ spell.goldMaintenance|nf }}</div>
